tests/compile_fail/defined_proj_e2i.out
In file included from tests/compile_fail/defined_proj_e2i.cpp:17:
src/lguim/secureenumconverter.inc:12:6: error: #error "SEC_PROJ_E2I defined before including secureenumconverter.inc"
     #error "SEC_PROJ_E2I defined before including secureenumconverter.inc"
      ^~~~~
compilation terminated due to -Wfatal-errors.
